--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -175,6 +175,7 @@ $mobilePopupMargin: 30px !default;
     .country {
       // Note: decided not to use line-height here for alignment because it causes issues e.g. large font-sizes will overlap, and also looks bad if one country overflows onto 2 lines
       padding: 5px 10px;
+      outline: none;
       // the dial codes after the country names are greyed out
       .dial-code {
         color: $greyText;
