Fix some a11y issues

--- a/examples/partials/countrySync.html
+++ b/examples/partials/countrySync.html
@@ -1,6 +1,6 @@
 <div class="form-item">
   <label>Telephone number</label>
-  <input id="phone" type="tel">
+  <input id="phone" type="tel" aria-label="Enter a phone number">
 </div>
 
 <div class="form-item">
