--- a/examples/partials/defaultCountryIp.html
+++ b/examples/partials/defaultCountryIp.html
@@ -1,2 +1,2 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<input id="phone" type="tel">
+<input id="phone" type="tel" aria-label="Enter a phone number">
