--- a/examples/partials/nationalMode.html
+++ b/examples/partials/nationalMode.html
@@ -1,2 +1,2 @@
 <p id="output">Please enter a valid number below</p>
-<input id="phone" type="tel">
+<input id="phone" type="tel" aria-label="Enter a phone number">
