--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -66,10 +66,10 @@ input, select {
 // borrowed from bootstrap
 button {
   color: #FFF;
-  background-color: #428BCA;
+  background-color: #2970AD;
   border: 1px solid #357EBD;
   &:hover {
-    background-color: #3276B1;
+    background-color: #144A79;
     border-color: #285E8E;
     cursor: pointer;
   }
