--- a/examples/partials/displayNumber.html
+++ b/examples/partials/displayNumber.html
@@ -1,1 +1,1 @@
-<input id="phone" type="tel" value="+447733312345">
+<input id="phone" type="tel" aria-label="Enter a phone number" value="+447733312345">
