--- a/examples/partials/hiddenInput.html
+++ b/examples/partials/hiddenInput.html
@@ -1,4 +1,4 @@
 <form>
-  <input id="phone" type="tel" name="phone">
+  <input id="phone" type="tel" aria-label="Enter a phone number" name="phone">
   <button type="submit">Submit</button>
 </form>
