--- a/examples/partials/isValidNumber.html
+++ b/examples/partials/isValidNumber.html
@@ -1,3 +1,3 @@
-<input id="phone" type="tel">
+<input id="phone" type="tel" aria-label="Enter a phone number">
 <span id="valid-msg" class="hide">✓ Valid</span>
 <span id="error-msg" class="hide"></span>
