--- a/examples/partials/multipleInstances.html
+++ b/examples/partials/multipleInstances.html
@@ -1,3 +1,3 @@
-Home: <input id="home" type="tel">
+Home: <input id="home" type="tel" aria-label="Enter a phone number">
 <br><br>
-Mobile: <input id="mobile" type="tel">
+Mobile: <input id="mobile" type="tel" aria-label="Enter a phone number">
