Update geoIpLookup example

--- a/examples/js/defaultCountryIp.js.ejs
+++ b/examples/js/defaultCountryIp.js.ejs
@@ -2,10 +2,10 @@ var input = document.querySelector("#phone");
 window.intlTelInput(input, {
   initialCountry: "auto",
   geoIpLookup: function(callback) {
-    $.get('https://ipinfo.io', function() {}, "jsonp").always(function(resp) {
-      var countryCode = (resp && resp.country) ? resp.country : "us";
-      callback(countryCode);
-    });
+    fetch("http://ip-api.com/json")
+      .then(function(res) { return res.json(); })
+      .then(function(data) { callback(data.countryCode); })
+      .catch(function() { callback("us"); });
   },
   utilsScript: "../../build/js/utils.js?<%= time %>" // just for formatting/placeholders etc
 });
