Fix CDN scripts in example

--- a/examples/partials/defaultCountryIp.html
+++ b/examples/partials/defaultCountryIp.html
@@ -1,5 +1,5 @@
 <!-- fetch and Promise polyfills for IE11 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/3.6.2/fetch.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.6.2/dist/fetch.umd.min.js"></script>
 
 <input id="phone" type="tel">
