--- a/examples/js/defaultCountryIp.js.ejs
+++ b/examples/js/defaultCountryIp.js.ejs
@@ -2,9 +2,9 @@ var input = document.querySelector("#phone");
 window.intlTelInput(input, {
   initialCountry: "auto",
   geoIpLookup: function(callback) {
-    fetch("http://ip-api.com/json")
+    fetch("https://ipapi.co/json")
       .then(function(res) { return res.json(); })
-      .then(function(data) { callback(data.countryCode); })
+      .then(function(data) { callback(data.country_code); })
       .catch(function() { callback("us"); });
   },
   utilsScript: "../../build/js/utils.js?<%= time %>" // just for formatting/placeholders etc
