--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -6,7 +6,7 @@
 // the border-highlighting some browsers give the input on focus
 $hoverColor: rgba(0, 0, 0, 0.05) !default;
 $greyText: #999 !default;
-$greyBorder: #CCC !default;
+$greyBorder: #ccc !default;
 
 $flagHeight: 15px !default;
 $flagWidth: 20px !default;
@@ -23,7 +23,8 @@ $arrowColor: #555 !default;
 
 $inputPadding: 6px !default;
 $selectedFlagWidth: $flagWidth + (2 * $flagPadding) !default;
-$selectedFlagArrowWidth: $flagWidth + $flagPadding + $arrowWidth + (2 * $arrowPadding) !default;
+$selectedFlagArrowWidth: $flagWidth + $flagPadding + $arrowWidth +
+  (2 * $arrowPadding) !default;
 
 // image related variables
 $flagsImagePath: "../img/" !default;
@@ -55,7 +56,9 @@ $mobilePopupMargin: 30px !default;
   }
 
   // specify types to increase specificity e.g. to override bootstrap v2.3
-  input, input[type=text], input[type=tel] {
+  input,
+  input[type="text"],
+  input[type="tel"] {
     position: relative;
     // input is bottom level, below selected flag and dropdown
     z-index: 0;
@@ -110,7 +113,7 @@ $mobilePopupMargin: 30px !default;
     border-right: $triangleBorder solid transparent;
     border-top: $arrowHeight solid $arrowColor;
 
-    [dir=rtl] & {
+    [dir="rtl"] & {
       margin-right: $arrowPadding;
       margin-left: 0;
     }
@@ -140,7 +143,7 @@ $mobilePopupMargin: 30px !default;
     // margin-left to compensate for the padding on the parent
     margin: 0 0 0 (-$borderWidth);
 
-    box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     background-color: white;
     border: $borderWidth solid $greyBorder;
 
@@ -192,23 +195,27 @@ $mobilePopupMargin: 30px !default;
   }
 
   // spacing between country flag, name and dial code
-  &__flag-box, &__country-name {
+  &__flag-box,
+  &__country-name {
     margin-right: 6px;
 
-    [dir=rtl] & {
+    [dir="rtl"] & {
       margin-right: 0;
       margin-left: 6px;
     }
   }
 
   // these settings are independent of each other, but both move selected flag to left of input
-  &--allow-dropdown, &--separate-dial-code {
-    input, input[type=text], input[type=tel] {
+  &--allow-dropdown,
+  &--separate-dial-code {
+    input,
+    input[type="text"],
+    input[type="tel"] {
       padding-right: $inputPadding;
       padding-left: $selectedFlagArrowWidth + $inputPadding;
       margin-left: 0;
 
-      [dir=rtl] & {
+      [dir="rtl"] & {
         padding-right: $selectedFlagArrowWidth + $inputPadding;
         padding-left: $inputPadding;
         margin-right: 0;
@@ -218,7 +225,7 @@ $mobilePopupMargin: 30px !default;
       right: auto;
       left: 0;
 
-      [dir=rtl] & {
+      [dir="rtl"] & {
         right: 0;
         left: auto;
       }
@@ -288,11 +295,6 @@ $mobilePopupMargin: 30px !default;
   }
 }
 
-
-
-
-
-
 @import "sprite";
 
 .iti__flag {
@@ -301,15 +303,13 @@ $mobilePopupMargin: 30px !default;
   background-image: url("#{$flagsImagePath}#{$flagsImageName}.#{$flagsImageExtension}");
   background-repeat: no-repeat;
   // empty state
-  background-color: #DBDBDB;
+  background-color: #dbdbdb;
   background-position: $flagWidth 0;
 
   @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     background-image: url("#{$flagsImagePath}#{$flagsImageName}@2x.#{$flagsImageExtension}");
   }
 }
-
-
 
 // hack for Nepal which is the only flag that is not square/rectangle, so it has transparency, so you can see the default grey behind it
 .iti__flag.iti__np {
