--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -7,7 +7,7 @@ body {
   margin: 20px;
 
   font-size: 14px;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #555;
 }
 
@@ -31,7 +31,8 @@ pre {
 }
 
 // general form styling
-input, button {
+input,
+button {
   height: 35px;
   margin: 0;
   padding: 6px 12px;
@@ -48,29 +49,31 @@ input, button {
 }
 
 // select useful for examples
-input, select {
-  border: 1px solid #CCC;
+input,
+select {
+  border: 1px solid #ccc;
   width: 250px;
 }
 ::-webkit-input-placeholder {
-   color: #BBB;
+  color: #bbb;
 }
-::-moz-placeholder {  /* Firefox 19+ */
-   color: #BBB;
-   opacity:  1;
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #bbb;
+  opacity: 1;
 }
 :-ms-input-placeholder {
-   color: #BBB;
+  color: #bbb;
 }
 
 // borrowed from bootstrap
 button {
-  color: #FFF;
-  background-color: #428BCA;
-  border: 1px solid #357EBD;
+  color: #fff;
+  background-color: #428bca;
+  border: 1px solid #357ebd;
   &:hover {
-    background-color: #3276B1;
-    border-color: #285E8E;
+    background-color: #3276b1;
+    border-color: #285e8e;
     cursor: pointer;
   }
 }
