Fix separate dial code padding calc on right for RTL

--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -259,6 +259,11 @@ $mobilePopupMargin: 30px !default;
     }
     &.iti--show-flags .iti__selected-dial-code {
       margin-left: $arrowPadding;
+
+      [dir="rtl"] & {
+        margin-left: 0;
+        margin-right: $arrowPadding;
+      }
     }
   }
 
