--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -32,6 +32,8 @@ $selectedFlagArrowWidth: $flagWidth + $flagPadding + $arrowWidth +
 $flagsImagePath: "../img/" !default;
 $flagsImageName: "flags" !default;
 $flagsImageExtension: "png" !default;
+// cache busting when we update the sprite
+$flagsImageQuery: "?1" !default;
 
 // enough space for them to click off to close
 $mobilePopupMargin: 30px !default;
@@ -307,14 +309,14 @@ $mobilePopupMargin: 30px !default;
 .iti__flag {
   height: $flagHeight;
   box-shadow: 0px 0px 1px 0px #888;
-  background-image: url("#{$flagsImagePath}#{$flagsImageName}.#{$flagsImageExtension}");
+  background-image: url("#{$flagsImagePath}#{$flagsImageName}.#{$flagsImageExtension}#{$flagsImageQuery}");
   background-repeat: no-repeat;
   // empty state
   background-color: #dbdbdb;
   background-position: $flagWidth 0;
 
   @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-    background-image: url("#{$flagsImagePath}#{$flagsImageName}@2x.#{$flagsImageExtension}");
+    background-image: url("#{$flagsImagePath}#{$flagsImageName}@2x.#{$flagsImageExtension}#{$flagsImageQuery}");
   }
 }
 
