--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -158,6 +158,7 @@ $mobilePopupMargin: 30px !default;
     width: 100%;
     border-width: 0;
     border-radius: 3px;
+    padding: 9px 12px;
 
     & + .iti__country-list {
       border-top: 1px solid $greyBorder;
