--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -47,8 +47,7 @@ select {
   border: 1px solid #ccc;
   width: 220px;
 }
-::placeholder,
-:-ms-input-placeholder {
+input::placeholder {
   color: #bbb;
 }
 
